# Sensacional-Firmware

./: .gitignore  .gitmodules  README.md
sensa-v0.1/: sdkconfig  sdkconfig.old
sensa-v0.1/board/: esp32s2_sensacional.c
sensa-v0.1/main/: main.c  mqtt.h
sensa-v1.0/: CMakeLists.txt  sdkconfig  sdkconfig.old
sensa-v1.0/board/: CMakeLists.txt  esp32_sensacional.c
sensa-v1.0/board/include/: esp32_sensacional.h
sensa-v1.0/components/Wrapper_BME280/: CMakeLists.txt  wrapper_bme280.c
sensa-v1.0/components/Wrapper_BME280/include/: wrapper_bme280.h
sensa-v1.0/components/Wrapper_SGP41/: CMakeLists.txt  sensirion_i2c_hal_esp32.c
sensa-v1.0/components/Wrapper_SGP41/test/: CMakeLists.txt  test_SGP40.c
sensa-v1.0/main/: CMakeLists.txt  main.c  mqtt.c
sensa-v1.0/main/include/: mqtt.h
